Update tejaswini assignment lab 1.ipynb

--- a/tejaswini assignment lab 1.ipynb
+++ b/tejaswini assignment lab 1.ipynb
@@ -373,13 +373,13 @@
    "source": [
     "import random\n",
     " \n",
-    "def group(x, y):\n",
+    "def team(x, y):\n",
     "    for n in range(0, len(x), y):\n",
     "        yield x[n:n + y]\n",
     "\n",
-    "group_members = ['ja0964','sa1198','sb1357','vb0218','sc1229','kg0569','kg0470','sg1297','bg0320','fh0141','jl1252','sk1386','ak0956','sk1390','sk1458','sk1313','ak0934','vm0377','nm0618','sm1640','sm1907','gn0108','pr0353','dr0609','ms1500','aos0040','ds0814','av0659','nv0234','hy0232']\n",
-    "random.shuffle(group_members)\n",
-    "x = list(group(group_members, 5))\n",
+    "team_members = ['ja0964','sa1198','sb1357','vb0218','sc1229','kg0569','kg0470','sg1297','bg0320','fh0141','jl1252','sk1386','ak0956','sk1390','sk1458','sk1313','ak0934','vm0377','nm0618','sm1640','sm1907','gn0108','pr0353','dr0609','ms1500','aos0040','ds0814','av0659','nv0234','hy0232']\n",
+    "random.shuffle(team_members)\n",
+    "x = list(team(team_members, 4))\n",
     "print(x)"
    ]
   },
