--- a/Lab_Assignment_03.ipynb
+++ b/Lab_Assignment_03.ipynb
@@ -6,6 +6,7 @@
       "name": "Lab_Assignment_03.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "authorship_tag": "ABX9TyNlay5iGq0W4joDCuQNX9P7",
       "include_colab_link": true
     },
